added responsivness to services, team, appointment, and contact sections

--- a/krishnaMarkup.html
+++ b/krishnaMarkup.html
@@ -160,7 +160,7 @@ toggleButton.addEventListener('click', () => {
                 </div>
                 <div class="drNileshDes">
                     <h1>Dr. Nilesh Trivedi</h1>
-                    <p class="title">Head Gynecologist, <br> Olivier Hospital</p>
+                    <p class="title">Head Gynecologist, <br> Krishna Hospital</p>
                     <p class="desc"><br>M.D. D.G.O. <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit.
                         Laborum
                         suscipit iusto, facilis ab quas doloribus asperiores aliquam unde non sed, minima consectetur
@@ -374,10 +374,10 @@ toggleButton.addEventListener('click', () => {
         <div class="footer">
             <p class="copyright">Copyright &copy; Krishna Women's Hospital</p>
             <p class="developers">Developers -
-                <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank">Vishvesh Trivedi</a>
-                <a href="" target="_blank">Neelav Bhatiya</a>
-                <a href="" target="_blank">Riya Shah</a>
-            </p>
+                    <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank">Vishvesh Trivedi</a>
+                    <a href="" target="_blank">Neelav Bhatiya</a>
+                    <a href="" target="_blank">Riya Shah</a>
+                </p>
         </div>
         <div class="topBtn">
             <a href="#top">^</a>
@@ -385,5 +385,4 @@ toggleButton.addEventListener('click', () => {
     </section>
 
 </body>
-
 </html>
