--- a/krishnaMarkup.html
+++ b/krishnaMarkup.html
@@ -33,7 +33,8 @@
         </div>
         <div class="hospDes"> Krishna Women's Hospital,<br> Ahmedabad</div>
         <div class="headInfo">
-            <div class="phone"> <img src="images/phone_icon-removebg-preview.png"> &nbsp +1 (668) 712 3428</div>
+            <div class="phone"> <img src="images/phone_icon-removebg-preview.png">&nbsp<p id='display'
+                onClick='copyText(this)'>+91 9978637506</p> (click to copy)</div>
             <div class="opdTimes"> <img src="images/calender_icon-removebg-preview.png"> &nbsp OPD Timings: 11AM - 7PM
             </div>
             <div class="location"><img src="images/location_icon.jpg"> <a href="#googleMaps">Click for Location</a>
@@ -48,7 +49,7 @@
         </div>
         <nav class="navBar">
             <ul>
-                <li class="button"><a href="#appointment">Make an Appointment</button></li>
+                <li class="button"><a href="#appointment">Make Appointment</button></li>
                 <li class="link"><a href="#home">Home</a></li>
                 <li class="link"><a href="#about">About Krishna</a></li>
                 <li class="link"><a href="#services">Services</a></li>
@@ -384,6 +385,32 @@
             <a href="#top">^</a>
         </div>
     </section>
+
+    <script>
+        function copyText(element) {
+            var range, selection, worked;
+
+            if (document.body.createTextRange) {
+                range = document.body.createTextRange();
+                range.moveToElementText(element);
+                range.select();
+            } else if (window.getSelection) {
+                selection = window.getSelection();
+                range = document.createRange();
+                range.selectNodeContents(element);
+                selection.removeAllRanges();
+                selection.addRange(range);
+            }
+
+            try {
+                document.execCommand('copy');
+                alert('Number copied');
+            }
+            catch (err) {
+                alert('unable to copy text');
+            }
+        }
+    </script>
 
 </body>
 
