--- a/services.html
+++ b/services.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -19,7 +20,9 @@
         </div>
         <div class="hospDes"> Krishna Hospital Services</div>
         <div class="headInfo">
-            <div class="phone"> <img src="images/phone_icon-removebg-preview.png"> &nbsp +1 (668) 712 3428 <button onclick="myFunction()">Copy</button></div>
+            <div class="phone"> <img src="images/phone_icon-removebg-preview.png"> &nbsp <p id='display'
+                    onClick='copyText(this)'>+91 9978637506</p> (click to copy)
+            </div>
             <div class="opdTimes"> <img src="images/calender_icon-removebg-preview.png"> &nbsp OPD Timings: 11AM - 7PM
             </div>
             <div class="location"><img src="images/location_icon.jpg"> <a href="#googleMaps">Click for Location</a>
@@ -34,7 +37,7 @@
         </div>
         <nav class="navBar">
             <ul>
-                <li class="link"><a href="#medtech">Medical Technologies</a></li>
+                <li class="link"><a href="#medtech">Medical Procedures</a></li>
                 <li class="link"><a href="#rooms">Rooms & Facilites</a></li>
                 <li class="link"><a href="#gallery">Photo Gallery</a></li>
                 <li class="link"><a href="#contact">Contact</a></li>
@@ -86,22 +89,31 @@
             <a href="#top">^</a>
         </div>
     </section>
+    <script>
+        function copyText(element) {
+            var range, selection, worked;
+
+            if (document.body.createTextRange) {
+                range = document.body.createTextRange();
+                range.moveToElementText(element);
+                range.select();
+            } else if (window.getSelection) {
+                selection = window.getSelection();
+                range = document.createRange();
+                range.selectNodeContents(element);
+                selection.removeAllRanges();
+                selection.addRange(range);
+            }
+
+            try {
+                document.execCommand('copy');
+                alert('Number copied');
+            }
+            catch (err) {
+                alert('unable to copy text');
+            }
+        }
+    </script>
 </body>
-<script>
-//  error - javascript does not function
-    function myFunction() {
-  /* Get the text field */
-  var copyText = document.getElementById("myInput");
 
-  /* Select the text field */
-  copyText.select();
-  copyText.setSelectionRange(0, 99999); /* For mobile devices */
-
-  /* Copy the text inside the text field */
-  document.execCommand("copy");
-
-  /* Alert the copied text */
-  alert("Copied the text: " + copyText.value);
-}
-</script>
 </html>
