added intro section in services page

--- a/services.html
+++ b/services.html
@@ -44,6 +44,34 @@
             </ul>
         </nav>
     </div>
+    <section id="intro">
+        <div class="introBlock">
+            <div class="introText">
+                <div class="introTitle">
+                    <h1>Krishna Services</h1>
+                </div>
+                <div class="introDes">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sed fugit impedit debitis aspernatur
+                    odit nulla totam culpa, laboriosam reprehenderit, error iusto mollitia. Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Harum veniam officiis.
+                </div>
+            </div>
+            <div class="introImg">
+                <img src="images/ot_room.jpg" alt="facilites">
+            </div>
+        </div>
+    </section>
+    <div class="scrolldown">
+        <img src="images/scroll_down-removebg-preview.png" alt="scroll down">
+    </div>
+    <section id="medpro">
+        <div class="medproTitle">
+            
+        </div>
+    </section>
+    <section id="rooms"></section>
+    <section id="gallery"></section>
+
     <section id="googleMaps">
         <h2 class="lineSpacing">(line spacing)</h2>
         <h2 class="lineSpacing">(line spacing)</h2>
