added medical procedure intro with grid and modified gitignore

--- a/services.html
+++ b/services.html
@@ -37,7 +37,7 @@
         </div>
         <nav class="navBar">
             <ul>
-                <li class="link"><a href="#medtech">Medical Procedures</a></li>
+                <li class="link"><a href="#medpro">Medical Procedures</a></li>
                 <li class="link"><a href="#rooms">Rooms & Facilites</a></li>
                 <li class="link"><a href="#gallery">Photo Gallery</a></li>
                 <li class="link"><a href="#contact">Contact</a></li>
@@ -65,8 +65,128 @@
         <img src="images/scroll_down-removebg-preview.png" alt="scroll down">
     </div>
     <section id="medpro">
-        <div class="medproTitle">
-            
+        <div class="medproBlock">
+            <div class="medproTitle">
+                <h1>Medical Procedures</h1>
+            </div>
+            <div class="medproDes">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ipsa omnis placeat mollitia at molestias
+                    repudiandae, assumenda quos esse suscipit, voluptatibus quaerat alias. Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Molestias perferendis iusto magni eligendi ipsum a ad quibusdam
+                    similique ipsa accusamus cumque unde ea odit temporibus, eaque iste earum voluptatum deserunt?
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem esse quia vero ut sit asperiores iure
+                    voluptates architecto saepe, hic sequi temporibus numquam? Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Error quo, placeat hic et libero quaerat temporibus expedita ea officia numquam
+                    suscipit itaque in?</p>
+            </div>
+        </div>
+        <div class="medprogrid">
+            <div class="item">
+                <div class="itemText">
+                    <div class="itemTitle">
+                        <h1>Routine Consultation</h1>
+                    </div>
+                    <div class="itemDes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias explicabo
+                        earum
+
+                    </div>
+                </div>
+                <div class="itemImg oddImg">
+                    <img src="images/mock_gallery_image.jpg" alt="">
+                </div>
+            </div>
+            <div class="item">
+                <div class="itemImg">
+                    <img src="images/mock_gallery_image.jpg" alt="">
+                </div>
+                <div class="itemText">
+                    <div class="itemTitle">
+                        <h1>Routine Consultation</h1>
+                    </div>
+                    <div class="itemDes">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem labore minima est
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="itemText">
+                    <div class="itemTitle">
+                        <h1>Routine Consultation</h1>
+                    </div>
+                    <div class="itemDes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores est, sit,
+                        beatae
+                    </div>
+                </div>
+                <div class="itemImg oddImg">
+                    <img src="images/mock_gallery_image.jpg" alt="">
+                </div>
+            </div>
+            <div class="item">
+                <div class="itemImg">
+                    <img src="images/mock_gallery_image.jpg" alt="">
+                </div>
+                <div class="itemText">
+                    <div class="itemTitle">
+                        <h1>Routine Consultation</h1>
+                    </div>
+                    <div class="itemDes">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus similique quo,
+                        laboriosam,
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="itemText">
+                    <div class="itemTitle">
+                        <h1>Routine Consultation</h1>
+                    </div>
+                    <div class="itemDes">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat cumque
+                        facilis
+                    </div>
+                </div>
+                <div class="itemImg oddImg">
+                    <img src="images/mock_gallery_image.jpg" alt="">
+                </div>
+            </div>
+            <div class="item">
+                <div class="itemImg">
+                    <img src="images/mock_gallery_image.jpg" alt="">
+                </div>
+                <div class="itemText">
+                    <div class="itemTitle">
+                        <h1>Routine Consultation</h1>
+                    </div>
+                    <div class="itemDes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas assumenda,
+                        magni
+                    </div>
+                </div>
+            </div>
+            <div class="item">
+                <div class="itemText">
+                    <div class="itemTitle">
+                        <h1>Routine Consultation</h1>
+                    </div>
+                    <div class="itemDes">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit nemo
+                        incidunt
+                        aperiam optio voluptatibus
+                    </div>
+                </div>
+                <div class="itemImg oddImg">
+                    <img src="images/mock_gallery_image.jpg" alt="">
+                </div>
+            </div>
+            <div class="item">
+                <div class="itemImg">
+                    <img src="images/mock_gallery_image.jpg" alt="">
+                </div>
+                <div class="itemText">
+                    <div class="itemTitle">
+                        <h1>Routine Consultation</h1>
+                    </div>
+                    <div class="itemDes">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem, a aperiam
+                        placeat
+                        asperiores</div>
+                </div>
+            </div>
         </div>
     </section>
     <section id="rooms"></section>
