added rooms intro and individual block with slideshow AND gallery block

--- a/services.html
+++ b/services.html
@@ -38,8 +38,8 @@
         <nav class="navBar">
             <ul>
                 <li class="link"><a href="#medpro">Medical Procedures</a></li>
-                <li class="link"><a href="#rooms">Rooms & Facilites</a></li>
-                <li class="link"><a href="#gallery">Photo Gallery</a></li>
+                <li class="link"><a href="#rooms">Rooms Categories</a></li>
+                <li class="link"><a href="#gallery">Gallery</a></li>
                 <li class="link"><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="itemText">
                     <div class="itemTitle">
-                        <h1>Routine Consultation</h1>
+                        <h1>High Risk Pregnancy Care</h1>
                     </div>
                     <div class="itemDes">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem labore minima est
                     </div>
@@ -111,7 +111,7 @@
             <div class="item">
                 <div class="itemText">
                     <div class="itemTitle">
-                        <h1>Routine Consultation</h1>
+                        <h1>Infertility Treatments</h1>
                     </div>
                     <div class="itemDes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores est, sit,
                         beatae
@@ -127,7 +127,7 @@
                 </div>
                 <div class="itemText">
                     <div class="itemTitle">
-                        <h1>Routine Consultation</h1>
+                        <h1>3D and 4D Sonography</h1>
                     </div>
                     <div class="itemDes">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus similique quo,
                         laboriosam,
@@ -137,7 +137,7 @@
             <div class="item">
                 <div class="itemText">
                     <div class="itemTitle">
-                        <h1>Routine Consultation</h1>
+                        <h1>Key-Hole Surgery (Laproscopy)</h1>
                     </div>
                     <div class="itemDes">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat cumque
                         facilis
@@ -153,7 +153,7 @@
                 </div>
                 <div class="itemText">
                     <div class="itemTitle">
-                        <h1>Routine Consultation</h1>
+                        <h1>Gynec Operative Procedures</h1>
                     </div>
                     <div class="itemDes">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas assumenda,
                         magni
@@ -163,7 +163,7 @@
             <div class="item">
                 <div class="itemText">
                     <div class="itemTitle">
-                        <h1>Routine Consultation</h1>
+                        <h1>Gynec Cancer Detection</h1>
                     </div>
                     <div class="itemDes">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Suscipit nemo
                         incidunt
@@ -180,7 +180,7 @@
                 </div>
                 <div class="itemText">
                     <div class="itemTitle">
-                        <h1>Routine Consultation</h1>
+                        <h1>New-born Vaccinations</h1>
                     </div>
                     <div class="itemDes">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem, a aperiam
                         placeat
@@ -189,8 +189,188 @@
             </div>
         </div>
     </section>
-    <section id="rooms"></section>
-    <section id="gallery"></section>
+    <div class="scrolldown2">
+        <img src="images/scroll_down-removebg-preview.png" alt="scroll down">
+    </div>
+    <section id="rooms">
+        <!-- used same class as medpro because of similar css layout choice -->
+        <div class="medproBlock">
+            <div class="medproTitle">
+                <h1>Room Categories</h1>
+            </div>
+            <div class="medproDes">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea ipsa omnis placeat mollitia at molestias
+                    repudiandae, assumenda quos esse suscipit, voluptatibus quaerat alias. Lorem ipsum dolor sit amet
+                    consectetur adipisicing elit. Molestias perferendis iusto magni eligendi ipsum a ad quibusdam
+                    similique ipsa accusamus cumque unde ea odit temporibus, eaque iste earum voluptatum deserunt?
+                </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem esse quia vero ut sit asperiores iure
+                    voluptates architecto saepe, hic sequi temporibus numquam? Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Error quo, placeat hic et libero quaerat temporibus expedita ea officia numquam
+                    suscipit itaque in?</p>
+            </div>
+        </div>
+        <div class="roomBlock">
+            <div class="roomText">
+                <div class="roomTitle">
+                    <h1>Deluxe Rooms</h1>
+                </div>
+                <div class="roomDes">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem dolorum
+                        voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem ipsum,
+                        dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
+                    </p>
+                </div>
+            </div>
+            <div class="slider">
+                <div class="slider-items">
+                    <div class="itemslider active">
+                        <img src="images/ot_room.jpg" />
+                    </div>
+                    <div class="itemslider">
+                        <img src="images/mock_tech_image.jpg" />
+                    </div>
+                    <div class="itemslider">
+                        <img src="images/mock_room_image.jpg" />
+                    </div>
+
+                </div>
+                <!-- slider controls -->
+                <div class="left-slide"><</div>
+                        <div class="right-slide">></div>
+                        <!-- slider controls -->
+            </div>
+        </div>
+            <div class="roomBlock">
+                <div class="roomText evenRoom">
+                    <div class="roomTitle">
+                        <h1>Special Rooms</h1>
+                    </div>
+                    <div class="roomDes">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem dolorum
+                            voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem
+                            ipsum,
+                            dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
+                        </p>
+                    </div>
+                </div>
+                <div class="slider">
+                    <div class="slider-items">
+                        <div class="itemslider active">
+                            <img src="images/ot_room.jpg" />
+                        </div>
+                        <div class="itemslider">
+                            <img src="images/mock_tech_image.jpg" />
+                        </div>
+                        <div class="itemslider">
+                            <img src="images/mock_room_image.jpg" />
+                        </div>
+
+                    </div>
+                    <!-- slider controls -->
+                    <div class="left-slide"><</div>
+                            <div class="right-slide">></div>
+                            <!-- slider controls -->
+                    </div>
+                </div>
+            </div>
+                <div class="roomBlock">
+                    <div class="roomText">
+                        <div class="roomTitle">
+                            <h1>Semi-Special Rooms</h1>
+                        </div>
+                        <div class="roomDes">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem
+                                dolorum
+                                voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem
+                                ipsum,
+                                dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="slider">
+                        <div class="slider-items">
+                            <div class="itemslider active">
+                                <img src="images/ot_room.jpg" />
+                            </div>
+                            <div class="itemslider">
+                                <img src="images/mock_tech_image.jpg" />
+                            </div>
+                            <div class="itemslider">
+                                <img src="images/mock_room_image.jpg" />
+                            </div>
+
+                        </div>
+                        <!-- slider controls -->
+                        <div class="left-slide"><</div>
+                                <div class="right-slide">></div>
+                                <!-- slider controls -->
+                        </div>
+                 </div>
+                 <div class="roomBlock">
+                    <div class="roomText evenRoom">
+                        <div class="roomTitle">
+                            <h1>General Ward</h1>
+                        </div>
+                        <div class="roomDes">
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi numquam exercitationem dolorum
+                                voluptatem eum aspernatur optio qui natus, ratione, excepturi nostrum tempora hic. Lorem ipsum,
+                                dolor sit amet consectetur adipisicing elit. Odit fuga non aliquid?
+                            </p>
+                        </div>
+                    </div>
+                    <div class="slider">
+                        <div class="slider-items">
+                            <div class="itemslider active">
+                                <img src="images/ot_room.jpg" />
+                            </div>
+                            <div class="itemslider">
+                                <img src="images/mock_tech_image.jpg" />
+                            </div>
+                            <div class="itemslider">
+                                <img src="images/mock_room_image.jpg" />
+                            </div>
+        
+                        </div>
+                        <!-- slider controls -->
+                        <div class="left-slide"><</div>
+                                <div class="right-slide">></div>
+                                <!-- slider controls -->
+                        </div>
+                    </div>
+                    
+    </section>
+    <div class="scrolldown3">
+        <img src="images/scroll_down-removebg-preview.png" alt="scroll down">
+    </div>
+    <section id="gallery">
+        <div class="galleryBlock">
+            <div class="galleryTitle"> <h1>Gallery</h1></div>
+            <div class="galleryDes"><p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor dignissimos maxime illum 
+                officia a consectetur quis quae reiciendis? Itaque enim deserunt atque, perferendis consectetur voluptates aperiam corporis porro labore tempora.
+            </p> 
+            </div>
+            <div class="slider gallerySlider">
+                <div class="slider-items">
+                    <div class="itemslider active">
+                        <img src="images/ot_room.jpg" />
+                    </div>
+                    <div class="itemslider">
+                        <img src="images/mock_tech_image.jpg" />
+                    </div>
+                    <div class="itemslider">
+                        <img src="images/mock_room_image.jpg" />
+                    </div>
+
+                </div>
+                <!-- slider controls -->
+                <div class="left-slide"><</div>
+                        <div class="right-slide">></div>
+                        <!-- slider controls -->
+                </div>
+        </div>
+    </section>
 
     <section id="googleMaps">
         <h2 class="lineSpacing">(line spacing)</h2>
@@ -260,6 +440,43 @@
             catch (err) {
                 alert('unable to copy text');
             }
+        }
+
+        var slides = document.querySelector('.slider-items').children;
+        var nextSlide = document.querySelector(".right-slide");
+        var prevSlide = document.querySelector(".left-slide");
+        var totalSlides = slides.length;
+        var index = 0;
+
+        nextSlide.onclick = function () {
+            next("next");
+        }
+        prevSlide.onclick = function () {
+            next("prev");
+        }
+
+        function next(direction) {
+
+            if (direction == "next") {
+                index++;
+                if (index == totalSlides) {
+                    index = 0;
+                }
+            }
+            else {
+                if (index == 0) {
+                    index = totalSlides - 1;
+                }
+                else {
+                    index--;
+                }
+            }
+
+            for (i = 0; i < slides.length; i++) {
+                slides[i].classList.remove("active");
+            }
+            slides[index].classList.add("active");
+
         }
     </script>
 </body>
