added redirecting links to individual service sections from index page

--- a/krishnaMarkup.html
+++ b/krishnaMarkup.html
@@ -121,7 +121,8 @@
                     <img src="images/mock_tech_image.jpg">
                 </div>
                 <div class="techDes">
-                    <h1> Medical Technologies</h1>
+                    <h1><a href="services.html#medpro" target="_blank">Medical Technologies</a></h1>
+                    <p class="clickhere">Click on title know more</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore deleniti labore hic ut, obcaecati
                         fugit vero neque id sequi! Obcaecati iste nostrum totam?</p>
                 </div>
@@ -131,7 +132,8 @@
                     <img src="images/mock_room_image.jpg">
                 </div>
                 <div class="roomDes">
-                    <h1> Rooms & Facilites</h1>
+                    <h1><a href="services.html#rooms" target="_blank">Room Categories</a></h1>
+                    <p class="clickhere">Click on title know more</p>
                     <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea temporibus aspernatur, cupiditate
                         praesentium consectetur eum alias ad, repudiandae sed eaque voluptates ipsum voluptate!</p>
                 </div>
@@ -141,7 +143,8 @@
                     <img src="images/mock_gallery_image.jpg">
                 </div>
                 <div class="galleryDes">
-                    <h1> Photo Gallery</h1>
+                    <h1><a href="services.html#gallery" target="_blank">Hospital Gallery</a></h1>
+                    <p class="clickhere">Click on title to know more</p>
                     <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum laudantium libero incidunt dicta
                         hic possimus officia repudiandae eum, vero exercitationem natus non! Cum?</p>
                 </div>
