--- a/services.html
+++ b/services.html
@@ -37,6 +37,7 @@
         </div>
         <nav class="navBar">
             <ul>
+                <li class="link"><a href="krishnaMarkup.html">Home Page</a></li>
                 <li class="link"><a href="#medpro">Medical Procedures</a></li>
                 <li class="link"><a href="#rooms">Rooms Categories</a></li>
                 <li class="link"><a href="#gallery">Gallery</a></li>
@@ -345,6 +346,7 @@
     </div>
     <section id="gallery">
         <div class="galleryBlock">
+            <h1 class="linespacing">section alignment</h1>
             <div class="galleryTitle"> <h1>Gallery</h1></div>
             <div class="galleryDes"><p>
                 Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor dignissimos maxime illum 
