added design elements, improved css and fixed alignment bugs in index page

--- a/krishnaMarkup.html
+++ b/krishnaMarkup.html
@@ -88,12 +88,14 @@
             </div>
         </div>
     </section>
-
+    <div class="scrolldown2">
+        <img src="images/scroll_down-removebg-preview.png" alt="scroll down">
+    </div>
     <section id="about">
         <div class="aboutSec">
             <div class="aboutLeft">
                 <div class="aboutTitle">
-                    <h1 class="lineSpacing" style="color: rgb(253, 251, 251);">(line spacing)</h1>
+                    <h1 class="lineSpacing">(line spacing)</h1>
                     <h1>About Krishna</h1>
                     <p>15 years ago a group of physicians envisioned a hospital that met the health needs of women and
                         fostered the understanding of how modern healthcare can improve the lives of women and their
