--- a/services.html
+++ b/services.html
@@ -30,18 +30,22 @@
         </div>
     </header>
     <div class="navBlock">
-        <div class="navBtn">
-            <a class="toggleBtn">
-                <span class="bar"></span><span class="bar"></span><span class="bar"></span>
-            </a>
-        </div>
         <nav class="navBar">
-            <ul>
-                <li class="link"><a href="krishnaMarkup.html">Home Page</a></li>
+            <div class="openMenu"><i class="fa fa-bars"></i></div>
+            <ul class="mainMenu">
+                <li class="button"><a href="krishnaMarkup.html#appointment">Make Appointment</button></li>
+                <li class="link"><a href="krishnaMarkup.html#top">Home</a></li>
                 <li class="link"><a href="#medpro">Medical Procedures</a></li>
-                <li class="link"><a href="#rooms">Rooms Categories</a></li>
+                <li class="link"><a href="#rooms">Room Categories</a></li>
                 <li class="link"><a href="#gallery">Gallery</a></li>
                 <li class="link"><a href="#contact">Contact</a></li>
+                <div class="devs">Developer Contacts</div>
+                <div class="closeMenu"><i class="fa fa-times"></i></div>
+                <span class="icons">
+                    <a href="https://www.linkedin.com/in/vishvesh-trivedi-783116214/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/viskyyy.___/" target="_blank"><i class="fab fa-instagram" ></i></a>
+                    <a href="https://github.com/NerdyVisky" target="_blank"><i class="fab fa-github"></i></a>
+                </span>
             </ul>
         </nav>
     </div>
@@ -419,6 +423,7 @@
             <a href="#top">^</a>
         </div>
     </section>
+    <script src="./app.js"></script>
     <script>
         function copyText(element) {
             var range, selection, worked;
