replaced logo and fixed togglebtn bug in services page

--- a/krishnaMarkup.html
+++ b/krishnaMarkup.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="krishnaStyles.css">
     <!-- <link rel="stylesheet" href="sliderStyle.css"> -->
-    <link rel="icon" href="images/mock_logo.jpg">
+    <link rel="icon" href="images/krishna_logo.jpg">
     <script src="https://kit.fontawesome.com/cc0efb1716.js" crossorigin="anonymous"></script>
     <script src="appointment.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
@@ -29,13 +29,13 @@
 <body id="top">
     <header>
         <div class="hospLogo">
-            <img src="images/mock_logo.jpg" alt="Krishna Hospital Logo">
+            <img src="images/krishna_logo.jpg" alt="Krishna Hospital Logo">
         </div>
         <div class="hospDes"> Krishna Women's Hospital,<br> Ahmedabad</div>
         <div class="headInfo">
             <div class="phone"> <img src="images/phone_icon-removebg-preview.png">&nbsp<p id='display'
                 onClick='copyText(this)'>+91 9978637506</p> (click to copy)</div>
-            <div class="opdTimes"> <img src="images/calender_icon-removebg-preview.png"> &nbsp OPD Timings: 11AM - 7PM
+            <div class="opdTimes"> <img src="images/calender_icon-removebg-preview.png"> &nbsp OPD Timings: 11AM - 2PM and 5PM - 7PM
             </div>
             <div class="location"><img src="images/location_icon.jpg"> <a href="#googleMaps">Click for Location</a>
             </div>
@@ -126,8 +126,8 @@
                     <img src="images/mock_tech_image.jpg">
                 </div>
                 <div class="techDes">
-                    <h1><a href="services.html#medpro" target="_blank">Medical Technologies</a></h1>
-                    <p class="clickhere">Click on title know more</p>
+                    <h1><a href="services.html#medpro" target="_blank">Medical Procedures</a></h1>
+                    <p class="clickhere">Click on title to know more</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore deleniti labore hic ut, obcaecati
                         fugit vero neque id sequi! Obcaecati iste nostrum totam?</p>
                 </div>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="roomDes">
                     <h1><a href="services.html#rooms" target="_blank">Room Categories</a></h1>
-                    <p class="clickhere">Click on title know more</p>
+                    <p class="clickhere">Click on title to know more</p>
                     <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ea temporibus aspernatur, cupiditate
                         praesentium consectetur eum alias ad, repudiandae sed eaque voluptates ipsum voluptate!</p>
                 </div>
