--- a/services.html
+++ b/services.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Krishna Services</title>
-    <link rel="icon" href="images/mock_logo.jpg">
+    <script src="https://kit.fontawesome.com/cc0efb1716.js" crossorigin="anonymous"></script>
+    <link rel="icon" href="images/krishna_logo.jpg">
     <link rel="stylesheet" href="servicesStyles.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -16,14 +17,14 @@
 <body>
     <header>
         <div class="hospLogo">
-            <img src="images/mock_logo.jpg" alt="Krishna Hospital Logo">
+            <img src="images/krishna_logo.jpg" alt="Krishna Hospital Logo">
         </div>
         <div class="hospDes"> Krishna Hospital Services</div>
         <div class="headInfo">
             <div class="phone"> <img src="images/phone_icon-removebg-preview.png"> &nbsp <p id='display'
                     onClick='copyText(this)'>+91 9978637506</p> (click to copy)
             </div>
-            <div class="opdTimes"> <img src="images/calender_icon-removebg-preview.png"> &nbsp OPD Timings: 11AM - 7PM
+            <div class="opdTimes"> <img src="images/calender_icon-removebg-preview.png"> &nbsp OPD Timings: 11AM - 2PM and 5PM - 7PM
             </div>
             <div class="location"><img src="images/location_icon.jpg"> <a href="#googleMaps">Click for Location</a>
             </div>
@@ -423,7 +424,7 @@
             <a href="#top">^</a>
         </div>
     </section>
-    <script src="./app.js"></script>
+    <script src="./toggle.js"></script>
     <script>
         function copyText(element) {
             var range, selection, worked;
